--- a/site/index.html
+++ b/site/index.html
@@ -7,7 +7,7 @@
             href="https://fonts.googleapis.com/css?family=Roboto:400,500,700&display=swap&subset=cyrillic"
             rel="stylesheet"
         />
-        <title>Elements-UI</title>
+        <title>Neutrino-UI</title>
     </head>
     <body>
         <div id="root"></div>
